# C-Utils

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Changelog.md  LICENSE  Readme.md  codecov.yml
.github/: dependabot.yml  releaseBody.md
.github/workflows/: createRelease.yml  formatCode.yml  runTests.yml
inc/: ADVUtilsAssert.h  IIRFilters.h  LKHashTable.h  LPHashTable.h  PID.h  aeroPID.h  basicMath.h  button.h  commonTypes.h  event.h  hashFunctions.h  list.h  matrix.h  movingAvg.h  numMethods.h  quaternion.h  queue.h  timer.h
src/: CMakeLists.txt  IIRFilters.c  LKHashTable.c  LPHashTable.c  PID.c  aeroPID.c  basicMath.c  button.c  event.c  hashFunctions.c  list.c  matrix.c  movingAvg.c  numMethods.c  quaternion.c  queue.c  timer.c
tests/: CMakeLists.txt  test_IIRFilters.c  test_LKHashTable.c  test_LPHashTable.c  test_PID.c  test_basicMath.c  test_button.c  test_event.c  test_hashFunctions.c  test_list.c  test_matrix.c  test_movingAvg.c  test_numMethods.c  test_quaternion.c  test_queue.c  test_timer.c
